# firstCppServer

./: CMakeLists.txt  LICENSE  siege.conf
include/: Server.h  Session.h
src/: Server.cpp  Session.cpp  main.cpp
